working on the project part

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               src="images/screenshots/guessTheNumber.png"
               alt="gameScreenshot"
             />
-            <div class="aboutGame">
+            <div class="aboutProject">
               <h3>Guess the Number</h3>
 
               <p class="first">
@@ -140,6 +140,30 @@
               <a
                 href="https://game-guess-the-number.vercel.app/"
                 target="_blank"
+                ><i class="fas fa-external-link-alt fa-2x"></i
+              ></a>
+            </div>
+          </div>
+          <div class="clock game">
+            <img
+              src="images/screenshots/digitalClock.png"
+              alt="gameScreenshot"
+            />
+            <div class="aboutProject">
+              <h3>Simple Digital Clock</h3>
+
+              <p class="first">
+                <span> &#9830; JavaScript</span> <span>&#9830;CSS</span>
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+                quasi necessitatibus velit voluptate qui pariatur voluptatum
+                facilis soluta delectus quas.
+              </p>
+              <a href="https://github.com/vukas86/digitalClock" target="_blank"
+                ><i class="fab fa-github fa-2x"></i
+              ></a>
+              <a href="https://digital-clock-five.vercel.app/" target="_blank"
                 ><i class="fas fa-external-link-alt fa-2x"></i
               ></a>
             </div>
