--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           class="myLogo"
         />
         <ul class="navbar">
-          <li><a href="#about">ABOUT ME</a></li>
+          <li><a href="#about" class="about-link">ABOUT ME</a></li>
           <li><a href="#myProjects">PROJECTS</a></li>
           <li><a href="#">RESUME</a></li>
           <li><a href="#contact">CONTACT ME</a></li>
@@ -245,5 +245,7 @@
         </div>
       </section>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
