--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           class="myLogo"
         />
         <ul class="navbar">
-          <li><a href="#about" class="about-link">ABOUT ME</a></li>
-          <li><a href="#myProjects">PROJECTS</a></li>
-          <li><a href="#">RESUME</a></li>
-          <li><a href="#contact">CONTACT ME</a></li>
+          <li class="nav_item">
+            <a href="#about" class="about-link">ABOUT ME</a>
+          </li>
+          <li class="nav_item"><a href="#myProjects">PROJECTS</a></li>
+          <!--  <li class="nav_item"><a href="#">RESUME</a></li> -->
+          <li class="nav_item"><a href="#contact">CONTACT ME</a></li>
         </ul>
       </nav>
       <header class="me">
