smooth scroling small update

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
         />
         <ul class="navbar">
           <li class="nav_item">
-            <a href="#about" class="about-link">ABOUT ME</a>
+            <a href="#about" class="about-link nav_link">ABOUT ME</a>
           </li>
-          <li class="nav_item"><a href="#myProjects">PROJECTS</a></li>
+          <li class="nav_item">
+            <a href="#myProjects" class="nav_link">PROJECTS</a>
+          </li>
           <!--  <li class="nav_item"><a href="#">RESUME</a></li> -->
-          <li class="nav_item"><a href="#contact">CONTACT ME</a></li>
+          <li class="nav_item">
+            <a href="#contact" class="nav_link">CONTACT ME</a>
+          </li>
         </ul>
       </nav>
       <header class="me">
