--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <nav>
+      <nav class="nav_items">
         <img
           src="images/logo/Aleksandar_Vukasovic-logos-blue-removebg-preview.png"
           alt="logo"
@@ -80,6 +80,7 @@
               src="images/ilustrations/undraw_Coding_re_iv62.svg"
               alt="about me illustr."
               class="pictSvg"
+              loading="eager"
             />
           </div>
 
