--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <div class="container">
-      <nav class="nav_items">
+    <header class="container">
+      <nav class="header_nav">
         <img
           src="images/logo/Aleksandar_Vukasovic-logos-blue-removebg-preview.png"
           alt="logo"
@@ -41,13 +41,13 @@
           </li>
         </ul>
       </nav>
-      <header class="me">
+      <div class="me">
         <div class="myName">
           <h2>Aleksandar Vukasovic</h2>
           <h4>Front-end Developer</h4>
         </div>
-      </header>
-    </div>
+      </div>
+    </header>
     <div style="overflow: hidden">
       <svg
         preserveAspectRatio="none"
