--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </svg>
     </div>
     <main>
-      <section class="aboutMe" id="about">
+      <section class="aboutMe section" id="about">
         <div class="aboutMe2">
           <div class="svg">
             <h3>&#10094; about me &#10095;</h3>
@@ -113,7 +113,7 @@
           <img src="images/1625669584836.jpg" alt="profile pic" />
         </div>
       </section>
-      <section id="myProjects">
+      <section id="myProjects" class="section">
         <div class="svg svg2">
           <h3>&#10094; my projects &#10095;</h3>
           <img
@@ -185,7 +185,7 @@
           class="pictSvg"
         />
       </div>
-      <section id="contact">
+      <section id="contact" class="section">
         <div class="left">
           <div class="content">
             <div class="logo">
@@ -215,6 +215,7 @@
                 name="name"
                 id="name"
                 placeholder="Enter your name"
+                required
               />
             </div>
             <div>
@@ -225,6 +226,7 @@
                 name="email"
                 id="email"
                 placeholder="Enter your email"
+                required
               />
             </div>
             <div>
