--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="aboutMe section" id="about">
         <div class="aboutMe2">
           <div class="svg">
-            <h3>&#10094; about me &#10095;</h3>
+            <h3>&#10094; about me / &#10095;</h3>
             <img
               src="images/ilustrations/undraw_Coding_re_iv62.svg"
               alt="about me illustr."
@@ -115,7 +115,7 @@
       </section>
       <section id="myProjects" class="section">
         <div class="svg svg2">
-          <h3>&#10094; my projects &#10095;</h3>
+          <h3>&#10094; my projects / &#10095;</h3>
           <img
             src="images/ilustrations/undraw_heatmap_uyye.svg"
             alt="about me illustr."
@@ -142,11 +142,13 @@
               <a
                 href="https://github.com/vukas86/GuessTheNumber_Game"
                 target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fab fa-github fa-2x"></i
               ></a>
               <a
                 href="https://game-guess-the-number.vercel.app/"
                 target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fas fa-external-link-alt fa-2x"></i
               ></a>
             </div>
@@ -167,10 +169,16 @@
                 quasi necessitatibus velit voluptate qui pariatur voluptatum
                 facilis soluta delectus quas.
               </p>
-              <a href="https://github.com/vukas86/digitalClock" target="_blank"
+              <a
+                href="https://github.com/vukas86/digitalClock"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fab fa-github fa-2x"></i
               ></a>
-              <a href="https://digital-clock-five.vercel.app/" target="_blank"
+              <a
+                href="https://digital-clock-five.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><i class="fas fa-external-link-alt fa-2x"></i
               ></a>
             </div>
@@ -178,7 +186,7 @@
         </div>
       </section>
       <div class="svg svg2">
-        <h3>&#10094; contact me &#10095;</h3>
+        <h3>&#10094; contact me / &#10095;</h3>
         <img
           src="images/ilustrations/undraw_message_sent_1030.svg"
           alt="about me illustr."
@@ -239,16 +247,18 @@
               ></textarea>
               <button id="btn" type="submit">Submit &#8594;</button>
             </div>
+            <h4>Or contact me here:</h4>
             <div class="contact-icons">
-              <h4>Or contact me here:</h4>
-              <div class="btn2">
-                <a href="#"
-                  ><img src="images/icons/linkendin.svg" alt="link"
-                /></a>
-              </div>
-              <div class="btn3">
-                <a href="#"><img src="images/icons/email.svg" alt="email" /></a>
-              </div>
+              <a href="https://www.linkedin.com/in/aleksandar-vukasovic/"
+                ><img
+                  src="images/icons/linkedin-color-svgrepo-com.svg"
+                  alt="link"
+              /></a>
+              <a href="mailto:aleksandar.vukasovic@yahoo.com"
+                ><img
+                  src="images/icons/mail-part-2-svgrepo-com.svg"
+                  alt="email"
+              /></a>
             </div>
           </form>
         </div>
