work on an About section and fixing page overflow

--- a/index.html
+++ b/index.html
@@ -85,13 +85,30 @@
           </div>
 
           <p>
-            I am former receptionist with a demonstrated history of working in
-            the leisure, travel & tourism industry. <br />
-            Now highly determined to enter in Front-End Development Career.
-            Looking forward to bring my passion for web development in my
-            projects, to continue to grow skills by working in IT industry and
-            keeping myself updated with the upcoming trends and technologies in
-            the market.
+            I have a diverse professional background, having started my career
+            as a receptionist in the leisure, travel, and tourism industry.
+            <br />
+
+            However, as time went on, I discovered a burning passion for web
+            development. Now, I'm determined to embark on a new adventure in the
+            exciting world of Front-End Development.
+            <br />
+
+            I am eagerly looking forward to expanding my skill set and knowledge
+            in the IT industry. I believe in continuously learning and keeping
+            pace with the ever-evolving trends and technologies that shape the
+            digital landscape. The prospect of exploring new frameworks,
+            programming languages, and design principles fills me with
+            excitement as I strive to deliver exceptional and innovative
+            solutions.
+            <br />
+            I'm eager to combine my passion for web development with my existing
+            skills and experiences to create remarkable digital experiences for
+            users.
+            <br />
+            Thank you for taking the time to learn about me. If you have any
+            questions or opportunities for collaboration, please don't hesitate
+            to reach out. Let's embark on this journey together!
           </p>
           <h4 class="tech">Some technologies I've been working recently:</h4>
           <div class="icons">
